docs(docs-infra): fixed missing gray color palette definitions for light and dark modes
Adds the missing gray color palette definitions for both light and dark modes

--- a/adev/shared-docs/styles/_reference.scss
+++ b/adev/shared-docs/styles/_reference.scss
@@ -51,7 +51,7 @@
     }
 
     .docs-reference-category {
-      color: var(--gray-400);
+      color: var(--quaternary-contrast);
       font-size: 0.875rem;
       font-weight: 500;
       line-height: 1.4rem;
